# jni-example

./: .gitignore  CMakeLists.txt  main.cpp  ump.cpp  ump.h
